<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:paddingLeft="17dp"
              android:paddingRight="17dp"
        >

    <EditText android:id="@+id/accountName"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="20dp"
              android:hint="@string/label_username"
              android:inputType="textEmailAddress"
              android:padding="10dp">
      <requestFocus />
   </EditText>

    <EditText android:id="@+id/accountPassword"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:inputType="textPassword"
              android:hint="@string/label_password"
              android:padding="10dp"
            />

    <Button android:id="@+id/submit"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:text="@string/label_dologin"
              android:padding="10dp"/>

    <TextView android:id="@+id/signUp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:text="@string/label_signup"
              android:padding="10dp"/>

</LinearLayout>

